sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:6: error: Unmatched closing brace '}' ignored here
                                       }
                                       ^